--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,8 +5,17 @@ services:
       container_name: mongodb-nodejs
       ports:
         - "27017:27017"
+      environment:
+        MONGO_INITDB_ROOT_USERNAME: "admin"
+        MONGO_INITDB_DATABASE: "mevaloriza_db"
+        MONGO_INITDB_ROOT_PASSWORD: "123456"
     mongo-express:
       image: "mongo-express:latest"
       container_name: mongo-express-nodejs
       ports:
         - "8081:8081"
+      environment:
+        ME_CONFIG_MONGODB_ADMINUSERNAME: "admin" 
+        ME_CONFIG_MONGODB_ADMINPASSWORD: "123456"
+
+
